fix wrongly marked down whitelist
This used to have '...or wrong addr' but it doesn't any more.

--- a/suites/kernel/thrash/thrashers/default.yaml
+++ b/suites/kernel/thrash/thrashers/default.yaml
@@ -1,6 +1,6 @@
 tasks:
 - ceph:
     log-whitelist:
-    - wrongly marked me down or wrong addr
+    - wrongly marked me down
     - objects unfound and apparently lost
 - thrashosds:
