--- a/suites/stress/thrash/thrashers/fast.yaml
+++ b/suites/stress/thrash/thrashers/fast.yaml
@@ -1,7 +1,7 @@
 tasks:
 - ceph:
     log-whitelist:
-    - wrongly marked me down or wrong addr
+    - wrongly marked me down
     - objects unfound and apparently lost
 - thrashosds:
     op_delay: 1
