Revert "fix wrongly marked down whitelist"
This reverts commit 55fc6f570a4e2e2a4a5c4435788f63f78b82d163.

--- a/suites/regression/singleton/all/osd-backfill.yaml
+++ b/suites/regression/singleton/all/osd-backfill.yaml
@@ -9,7 +9,7 @@ roles:
 tasks:
 - ceph:
     log-whitelist:
-    - wrongly marked me down
+    - wrongly marked me down or wrong addr
     conf:
       osd:
         osd min pg log entries: 5
