--- a/suites/stress/thrash/thrashers/more-down.yaml
+++ b/suites/stress/thrash/thrashers/more-down.yaml
@@ -1,7 +1,7 @@
 tasks:
 - ceph:
     log-whitelist:
-    - wrongly marked me down
+    - wrongly marked me down or wrong addr
     - objects unfound and apparently lost
 - thrashosds:
     chance_down: 50
