workunit/pjd:  Use modified pjd with open test
We have a modified version of pjd that includes an open test
(open.24).  The test ensures that open with mode=1000 and
O_CREAT|O_WRONLY succeeds on a non-existent file.

The modifications to the workunit use the pexec teuthology task
instead of the workunit task to avoid having to commit minor,
teuthology specific changes to the ceph tree directly
(namely the pjd.sh script).  Other than using the modified pjd
tarball, the script remains the same.

Signed-off-by: Sam Lang <sam.lang@inktank.com>

--- a/suites/fs/basic/tasks/cfuse_workunit_suites_pjd.yaml
+++ b/suites/fs/basic/tasks/cfuse_workunit_suites_pjd.yaml
@@ -8,7 +8,17 @@ tasks:
         debug ms: 1
         debug mds: 20
 - ceph-fuse:
-- workunit:
+- pexec:
+    sudo: true
     clients:
-      all:
-        - suites/pjd.sh
+      - cd /tmp/cephtest/mnt.*
+      - wget http://teuthology.front.sepia.ceph.com/qa/pjd-fstest-20090130-RC-open24.tgz
+      - tar zxvf pjd*.tgz
+      - cd pjd*
+      - make
+      - cd ..
+      - mkdir tmp
+      - cd tmp
+      - prove -r -v --exec 'bash -x' ../pjd*/tests
+      - cd ..
+      - rm -r tmp pjd*
