--- a/suites/rgw/verify/validater/valgrind.yaml
+++ b/suites/rgw/verify/validater/valgrind.yaml
@@ -1,4 +1,7 @@
 overrides:
+  install:
+    ceph:
+      flavor: notcmalloc
   ceph:
     valgrind:
       mon: [--tool=memcheck, --leak-check=full, --show-reachable=yes]
