--- a/suites/rados/monthrash/msgr-failures/mon-delay.yaml
+++ b/suites/rados/monthrash/msgr-failures/mon-delay.yaml
@@ -3,6 +3,6 @@ overrides:
     conf:
       global:
         ms inject socket failures: 2500
-        ms inject delay type: osd
+        ms inject delay type: mon
         ms inject delay probability: .005
         ms inject delay max: 1
