--- a/suites/rados/basic/tasks/rados_mon_workunits.yaml
+++ b/suites/rados/basic/tasks/rados_mon_workunits.yaml
@@ -1,7 +1,10 @@
 tasks:
+- install:
+- ceph:
 - workunit:
     clients:
       client.0:
         - mon/pool_ops.sh
+        - mon/crush_ops.sh
         - mon/osd.sh
 
