--- a/suites/ceph-deploy/rados/tasks/rados_api_tests.yaml
+++ b/suites/ceph-deploy/rados/tasks/rados_api_tests.yaml
@@ -5,16 +5,14 @@ roles:
   - osd.1
 - - mon.b
   - osd.2
+  - osd.3
 - - client.0
 tasks:
 - install:
      extras: yes
 - ssh_keys:
 - ceph-deploy:
-     branch:
-        dev: master
-- ceph-fuse:
 - workunit:
      clients:
         client.0:
-           rbd/test_librbd_python.sh
+           - rados/test.sh
