--- a/suites/ceph-deploy/rbd/tasks/rbd_api_tests_old_format.yaml
+++ b/suites/ceph-deploy/rbd/tasks/rbd_api_tests_old_format.yaml
@@ -10,10 +10,7 @@ tasks:
      extras: yes
 - ssh_keys:
 - ceph-deploy:
-     branch:
-        dev: master
-- ceph-fuse:
 - workunit:
      clients:
         client.0:
-           - suites/fsstress.sh
+           - rbd/test_librbd.sh
