--- a/suites/ceph-deploy/rbd/tasks/rbd_cls_test.yaml
+++ b/suites/ceph-deploy/rbd/tasks/rbd_cls_test.yaml
@@ -2,21 +2,15 @@ roles:
 - - mon.a
   - mds.0
   - osd.0
-  - osd.1
 - - mon.b
-  - osd.2
-  - osd.3
+  - osd.1
 - - client.0
 tasks:
 - install:
      extras: yes
 - ssh_keys:
 - ceph-deploy:
-     branch:
-        dev: master
-- ceph-fuse:
 - workunit:
      clients:
         client.0:
-           - rados/test.sh
-
+           - cls/test_cls_rbd.sh
