expanding upgrade suites to include emperor.
Signed-off-by: tamil <tamil.muthamizhan@inktank.com>
(cherry picked from commit 6afe65399a364b6e855b094cca3f677c44dc8faf)

--- a/suites/upgrade/singleton/all/upgrade-dumpling-emperor.yaml
+++ b/suites/upgrade/singleton/all/upgrade-dumpling-emperor.yaml
@@ -21,6 +21,7 @@ tasks:
         debug client: 20
 - install.upgrade:
      all:
+        branch: emperor
 - ceph.restart:
 - ceph-fuse: [client.0]
 - workunit:
