rgw: fix multi-region test in verify suite
This only syncs metadata, since it tests two regions.

Signed-off-by: Josh Durgin <josh.durgin@inktank.com>

--- a/suites/rgw/verify/tasks/rgw_s3tests_multiregion.yaml
+++ b/suites/rgw/verify/tasks/rgw_s3tests_multiregion.yaml
@@ -52,7 +52,7 @@ tasks:
     client.0:
       src: client.0
       dest: client.1
-
+      metadata-only: true
 - s3tests:
     client.0:
       rgw_server: client.0
