added fs:xfs to the tests
Signed-off-by: tamil <tamil.muthamizhan@inktank.com>

--- a/suites/upgrade/singleton/all/upgrade-dumpling-emperor.yaml
+++ b/suites/upgrade/singleton/all/upgrade-dumpling-emperor.yaml
@@ -19,6 +19,7 @@ tasks:
       client:
         debug ms: 1
         debug client: 20
+    fs: xfs
 - install.upgrade:
      all:
         branch: emperor
