upgrade: whitelist log bound mismatch
Older releases were more restrictive about log bounds after split.
This is a harmless bug which would require backporting a fix to
dumpling and older.

Signed-off-by: Samuel Just <sam.just@inktank.com>

--- a/suites/upgrade-cuttlefish/fs/4-final/osdthrash.yaml
+++ b/suites/upgrade-cuttlefish/fs/4-final/osdthrash.yaml
@@ -3,6 +3,7 @@ overrides:
     log-whitelist:
     - wrongly marked me down
     - objects unfound and apparently lost
+    - log bound mismatch
 tasks:
 - thrashosds:
     timeout: 1200
