Don't run QEMU tests on ARM arch.
Kernel doesn't support KVM and it doesn't make much sense to do
these tests on ARM in the first place...

Signed-off-by: Sandon Van Ness <sandon@inktank.com>

--- a/suites/rbd/librbd/workloads/qemu_bonnie.yaml
+++ b/suites/rbd/librbd/workloads/qemu_bonnie.yaml
@@ -2,3 +2,4 @@ tasks:
 - qemu:
     all:
       test: https://ceph.com/git/?p=ceph.git;a=blob_plain;f=qa/workunits/suites/bonnie.sh
+exclude_arch: armv7l
