Don't thrash primary affinity
primary affinity does not exist in dumpling.

Fixes: #8726
Signed-off-by: Josh Durgin <josh.durgin@inktank.com>

--- a/suites/powercycle/osd/powercycle/default.yaml
+++ b/suites/powercycle/osd/powercycle/default.yaml
@@ -2,6 +2,7 @@ tasks:
 - install:
 - ceph:
 - thrashosds:
+    thrash_primary_affinity: false
     chance_down: 1.0
     powercycle: true
     timeout: 600
