--- a/suites/rados/thrash/thrashers/morepggrow.yaml
+++ b/suites/rados/thrash/thrashers/morepggrow.yaml
@@ -5,6 +5,7 @@ tasks:
     - wrongly marked me down
     - objects unfound and apparently lost
 - thrashosds:
+    thrash_primary_affinity: false
     timeout: 1200
     chance_pgnum_grow: 3
     chance_pgpnum_fix: 1
