--- a/suites/rbd/thrash/thrashers/default.yaml
+++ b/suites/rbd/thrash/thrashers/default.yaml
@@ -5,4 +5,5 @@ tasks:
     - wrongly marked me down
     - objects unfound and apparently lost
 - thrashosds:
+    thrash_primary_affinity: false
     timeout: 1200
