--- a/suites/rados/singleton/all/thrash-rados.yaml
+++ b/suites/rados/singleton/all/thrash-rados.yaml
@@ -14,6 +14,7 @@ tasks:
     log-whitelist:
     - wrongly marked me down
 - thrashosds:
+    thrash_primary_affinity: false
     op_delay: 30
     clean_interval: 120
     chance_down: .5
