--- a/suites/stress/thrash/thrashers/fast.yaml
+++ b/suites/stress/thrash/thrashers/fast.yaml
@@ -5,5 +5,6 @@ tasks:
     - wrongly marked me down
     - objects unfound and apparently lost
 - thrashosds:
+    thrash_primary_affinity: false
     op_delay: 1
     chance_down: 10
