--- a/suites/upgrade-cuttlefish/rados-older/6-final/osdthrash.yaml
+++ b/suites/upgrade-cuttlefish/rados-older/6-final/osdthrash.yaml
@@ -5,6 +5,7 @@ overrides:
     - objects unfound and apparently lost
 tasks:
 - thrashosds:
+    thrash_primary_affinity: false
     timeout: 1200
     chance_pgnum_grow: 1
     chance_pgpnum_fix: 1
