--- a/suites/upgrade/dumpling/rados/1-dumpling-install/cuttlefish.v0.67.1.yaml
+++ b/suites/upgrade/dumpling/rados/1-dumpling-install/cuttlefish.v0.67.1.yaml
@@ -6,6 +6,9 @@ tasks:
     all:
       tag: v0.67.1
 - ceph.restart:
+- install.upgrade:
+    all:
+      branch: dumpling
 - parallel:
    - workload
    - upgrade-sequence
