--- a/suites/upgrade/dumpling/rgw/1-dumpling-install/v0.67.1.yaml
+++ b/suites/upgrade/dumpling/rgw/1-dumpling-install/v0.67.1.yaml
@@ -2,6 +2,9 @@ tasks:
 - install:
     tag: v0.67.1
 - ceph:
+- install.upgrade:
+    all:
+      branch: dumpling
 - parallel:
    - workload
    - upgrade-sequence
