--- a/suites/smoke/verify/tasks/rgw_s3tests.yaml
+++ b/suites/smoke/verify/tasks/rgw_s3tests.yaml
@@ -5,5 +5,6 @@ tasks:
     client.0:
       valgrind: [--tool=memcheck]
 - s3tests:
+    default_idle_timeout: 300
     client.0:
       rgw_server: client.0
