Add extra conf for Apache 2.4
Inside a conditional to affect only 2.4, set User, Group, and the
module config to load mpm_event.  This is normally done with the
default configuration files, but since this abbreviated conf bypasses
those, we must set them here.

Signed-off-by: Dan Mick <dan.mick@inktank.com>
(cherry picked from commit 9de5bd1d2302907c59594eb4df8b4d954d5e8e94)

Conflicts:

	tasks/rgw.py

--- a/tasks/apache.conf.template
+++ b/tasks/apache.conf.template
@@ -14,6 +14,12 @@
 Listen {port}
 ServerName {host}
 
+<IfVersion >= 2.4>
+  User {user}
+  Group {group}
+  {apache24_modconfig}
+</IfVersion>
+
 ServerRoot {testdir}/apache
 ErrorLog {testdir}/archive/apache.{client}/error.log
 LogFormat "%h l %u %t \"%r\" %>s %b \"{{Referer}}i\" \"%{{User-agent}}i\"" combined
