--- a/suites/upgrade/dumpling/rgw/4-final/osdthrash.yaml
+++ b/suites/upgrade/dumpling/rgw/4-final/osdthrash.yaml
@@ -1,16 +1,17 @@
-overrides:
-  ceph:
-    log-whitelist:
-    - wrongly marked me down
-    - objects unfound and apparently lost
-    - log bound mismatch
-tasks:
-- thrashosds:
-    thrash_primary_affinity: false
-    timeout: 1200
-    chance_pgnum_grow: 1
-    chance_pgpnum_fix: 1
-- swift:
-    client.0:
-      rgw_server: client.0
+### removed osd thrashing until we get a better handle on how to control all the timeouts
+#overrides:
+#  ceph:
+#    log-whitelist:
+#    - wrongly marked me down
+#    - objects unfound and apparently lost
+#    - log bound mismatch
+#tasks:
+#- thrashosds:
+#    thrash_primary_affinity: false
+#    timeout: 1200
+#    chance_pgnum_grow: 1
+#    chance_pgpnum_fix: 1
+#- swift:
+#    client.0:
+#      rgw_server: client.0
 
