--- a/suites/rados/thrash/workloads/cache-agent-big.yaml
+++ b/suites/rados/thrash/workloads/cache-agent-big.yaml
@@ -16,6 +16,7 @@ tasks:
       - ceph osd pool set cache hit_set_count 8
       - ceph osd pool set cache hit_set_period 60
       - ceph osd pool set cache target_max_objects 5000
+- ceph.created_pool: [base, cache]
 - rados:
     clients: [client.0]
     pools: [base]
