--- a/suites/rados/thrash/workloads/cache-agent-small.yaml
+++ b/suites/rados/thrash/workloads/cache-agent-small.yaml
@@ -14,6 +14,7 @@ tasks:
       - ceph osd pool set cache hit_set_count 8
       - ceph osd pool set cache hit_set_period 60
       - ceph osd pool set cache target_max_objects 250
+- ceph.created_pool: [base, cache]
 - rados:
     clients: [client.0]
     pools: [base]
