--- a/suites/rados/thrash/workloads/cache.yaml
+++ b/suites/rados/thrash/workloads/cache.yaml
@@ -13,6 +13,7 @@ tasks:
       - ceph osd pool set cache hit_set_type bloom
       - ceph osd pool set cache hit_set_count 8
       - ceph osd pool set cache hit_set_period 3600
+- ceph.created_pool: [base, cache]
 - rados:
     clients: [client.0]
     pools: [base]
