--- a/suites/fs/multiclient/tasks/mdtest.yaml
+++ b/suites/fs/multiclient/tasks/mdtest.yaml
@@ -2,17 +2,18 @@ tasks:
 - pexec:
     clients:
       - cd $TESTDIR
-      - wget http://ceph.com/qa/mdtest-1.8.4.tgz
-      - tar xvfz mdtest-1.8.4.tgz
-      - rm $TESTDIR/mdtest-1.8.4.tgz
-      - cd mdtest-1.8.4
-      - make
+      - wget http://ceph.com/qa/mdtest-1.9.3.tgz
+      - mkdir mdtest-1.9.3
+      - cd mdtest-1.9.3
+      - tar xvfz $TESTDIR/mdtest-1.9.3.tgz
+      - rm $TESTDIR/mdtest-1.9.3.tgz
+      - MPI_CC=mpicc make
       - ln -s $TESTDIR/mnt.* $TESTDIR/gmnt
 - ssh_keys:
 - mpi:
-    exec: $TESTDIR/mdtest-1.8.4/mdtest -d $TESTDIR/gmnt -I 20 -z 5 -b 2 -R
+    exec: $TESTDIR/mdtest-1.9.3/mdtest -d $TESTDIR/gmnt -I 20 -z 5 -b 2 -R
 - pexec:
     all:
       - rm -f $TESTDIR/gmnt
-      - rm -rf $TESTDIR/mdtest-1.8.4
-      - rm -rf $TESTDIR/._mdtest-1.8.4
+      - rm -rf $TESTDIR/mdtest-1.9.3
+      - rm -rf $TESTDIR/._mdtest-1.9.3
