Simplified teh flow
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/suites/upgrade/firefly-wip-9419/1-install-firefly/firefly.yaml
+++ b/suites/upgrade/firefly-wip-9419/1-install-firefly/firefly.yaml
@@ -4,6 +4,6 @@ tasks:
 - print: "**** done firefly install"
 - ceph:
    fs: xfs
-- parallel:
+- sequential:
    - workload
-- print: "**** done parallel"
+- print: "**** done sequential"
