--- a/suites/upgrade/firefly-wip-9419/3-giant-upgrade/giant.yaml
+++ b/suites/upgrade/firefly-wip-9419/3-giant-upgrade/giant.yaml
@@ -6,4 +6,6 @@ tasks:
    - print: "**** done install.upgrade"
    - ceph.restart:
    - print: "**** done restart"
+- sequential:
    - workload2
+- print: "**** done sequential"
