--- a/suites/upgrade/firefly-wip-9419/3-workload/test_rbd_python.yaml
+++ b/suites/upgrade/firefly-wip-9419/3-workload/test_rbd_python.yaml
@@ -1,7 +1,7 @@
 workload:
   sequential:
   - workunit:
-      branch: dumpling
+      branch: giant
       clients:
         client.0:
         - rbd/test_librbd_python.sh
