--- a/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
+++ b/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
@@ -12,7 +12,7 @@ tasks:
    - install.upgrade:
        mon.a:
        mon.b:
-#- ceph.restart: [mon.a, mon.b, mon.c, imds.a, osd.0, osd.1, osd.2, osd.3]
+#- ceph.restart: [mon.a, mon.b, mon.c, mds.0, osd.0, osd.1, osd.2, osd.3]
    - ceph.restart: [osd.0, osd.1, osd.2]
    - print: "**** done restart"
    - sequential:
