--- a/suites/upgrade/dumpling-wip-9419/4-workload/test_rbd_python.yaml
+++ b/suites/upgrade/dumpling-wip-9419/4-workload/test_rbd_python.yaml
@@ -1,8 +1,8 @@
 workload2:
   sequential:
   - workunit:
-      branch: giant
+      branch: dumpling
       clients:
         client.0:
         - rbd/test_librbd_python.sh
-  - print: "**** done rbd/test_librbd_python.sh"
+  - print: "**** done rbd/test_librbd_python.sh 2"
