Trying one workload
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
+++ b/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
@@ -5,9 +5,9 @@ tasks:
    - print: "**** done install.upgrade"
    - ceph.restart:
    - print: "**** done restart"
-   - sequential:
-      - workload
-   - print: "**** done workload"
+#   - sequential:
+#      - workload
+#   - print: "**** done workload"
    - install.upgrade:
        mon.a:
        mon.b:
