--- a/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
+++ b/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
@@ -5,9 +5,6 @@ tasks:
    - print: "**** done install.upgrade"
    - ceph.restart:
    - print: "**** done restart"
-#   - sequential:
-#      - workload
-#   - print: "**** done workload"
    - install.upgrade:
        mon.a:
        mon.b:
@@ -15,5 +12,5 @@ tasks:
    - ceph.restart: [osd.0, osd.1, osd.2]
    - print: "**** done restart"
    - sequential:
-      - workload2
-   - print: "**** done workload2"
+      - workload
+   - print: "**** done workload"
