--- a/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
+++ b/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
@@ -8,8 +8,8 @@ tasks:
    - install.upgrade:
        mon.a:
        mon.b:
-#- ceph.restart: [mon.a, mon.b, mon.c, mds.a, osd.0, osd.1, osd.2, osd.3]
-   - ceph.restart: [osd.0, osd.1, osd.2]
+   - ceph.restart: [mon.a, mon.b, mon.c, mds.a, osd.0, osd.1, osd.2, osd.3]
+   #- ceph.restart: [osd.0, osd.1, osd.2]
    - print: "**** done restart"
    - sequential:
       - workload
