--- a/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
+++ b/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
@@ -1,10 +1,10 @@
 tasks:
    - install.upgrade:
        client.0:
-# client.1 will be upgraded as well as it's on the same host as client.0
+   # client.1 will be upgraded as well as it's on the same host as client.0
    - print: "**** done install.upgrade"
-   - ceph.restart:
-   - print: "**** done restart"
+   #- ceph.restart:
+   #- print: "**** done restart"
    - install.upgrade:
        mon.a:
        mon.b:
