--- a/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
+++ b/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
@@ -2,14 +2,17 @@ tasks:
    - install.upgrade:
        client.0:
    # client.1 will be upgraded as well as it's on the same host as client.0
-   - print: "**** done install.upgrade"
+   - print: "**** done install.upgrade on clinet.0 and client.1"
    #- ceph.restart:
    #- print: "**** done restart"
    - install.upgrade:
-       mon.a:
-       mon.b:
-   - ceph.restart: [mon.a, mon.b, mon.c, mds.a, osd.0, osd.1, osd.2, osd.3]
-   #- ceph.restart: [osd.0, osd.1, osd.2]
+   #    mon.a:
+   #    mon.b:
+       osd.0:
+       osd.1:
+       osd.2:
+   #- ceph.restart: [mon.a, mon.b, mon.c, mds.a, osd.0, osd.1, osd.2, osd.3]
+   - ceph.restart: [osd.0, osd.1, osd.2]
    - print: "**** done restart"
    - sequential:
       - workload
