--- a/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
+++ b/suites/upgrade/dumpling-wip-9419/2-giant-upgrade/giant.yaml
@@ -3,18 +3,18 @@ tasks:
        client.0:
    # client.1 will be upgraded as well as it's on the same host as client.0
    - print: "**** done install.upgrade on clinet.0 and client.1"
-   #- ceph.restart:
-   #- print: "**** done restart"
+   - ceph.restart:
+   - print: "**** done restart"
    - install.upgrade:
-   #    mon.a:
-   #    mon.b:
-       osd.0:
-       osd.1:
-       osd.2:
+       mon.a:
+       mon.b:
+   #    osd.0:
+   #    osd.1:
+   #    osd.2:
    #- ceph.restart: [mon.a, mon.b, mon.c, mds.a, osd.0, osd.1, osd.2, osd.3]
    - ceph.restart: 
        daemons: [osd.0, osd.1, osd.2]
-       wait-for-healthy: false
+   #    wait-for-healthy: false
    - print: "**** done restart"
    - sequential:
       - workload
