fixes issue: #9616 and further optimization of the upgrade:dumpling suites
Signed-off-by: tamil <tamil.muthamizhan@inktank.com>

--- a/suites/upgrade/dumpling/rgw/1-dumpling-install/v0.67.5.yaml
+++ b/suites/upgrade/dumpling/rgw/1-dumpling-install/v0.67.5.yaml
@@ -3,7 +3,9 @@ tasks:
     tag: v0.67.5
 - ceph:
 - install.upgrade:
-    all:
+    mon.a:
+      branch: dumpling
+    mon.b:
       branch: dumpling
 - rgw: [client.0]
 - parallel:
