--- a/suites/upgrade/giant/2-workload/s3tests.yaml
+++ b/suites/upgrade/giant/2-workload/s3tests.yaml
@@ -6,4 +6,4 @@ workload:
       client.0:
         force-branch: firefly-original
         rgw_server: client.0
-  - print: "**** done s3tests"
+  - print: "**** done s3tests on client.0"
