Changed 'tag' to 'branch'
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/suites/upgrade/giant/1-install/latest_firefly_release.yaml
+++ b/suites/upgrade/giant/1-install/latest_firefly_release.yaml
@@ -1,8 +1,8 @@
 tasks:
 # change tag to the latest firefly released version
 - install:
-    tag: v0.80.6
-- print: "**** done latest firefly install"
+    branch: firefly
+- print: "**** done latest branch firefly install"
 - ceph:
    fs: xfs
 - parallel:
