Specified ceph-fuse to be on [client.0]
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/suites/upgrade/giant/5-final/monthrash.yaml
+++ b/suites/upgrade/giant/5-final/monthrash.yaml
@@ -3,7 +3,7 @@ tasks:
     revive_delay: 20
     thrash_delay: 1
 - print: "**** done mon_thrash"
-- ceph-fuse:
+- ceph-fuse: [client.0]
 - print: "**** done ceph-fuse"
 - workunit:
     clients:
