objectstore_tool: tests only needs 1 machine
Signed-off-by: Loic Dachary <ldachary@redhat.com>

--- a/suites/rados/objectstore/ceph_objectstore_tool.yaml
+++ b/suites/rados/objectstore/ceph_objectstore_tool.yaml
@@ -1,7 +1,5 @@
 roles:
-- [mon.0, osd.0, osd.1, osd.2]
-- [osd.3, osd.4, osd.5]
-- [client.0]
+- [mon.0, osd.0, osd.1, osd.2, osd.3, osd.4, osd.5, client.0]
 
 tasks:
 - install:
