--- a/machine_types/vps.yaml
+++ b/machine_types/vps.yaml
@@ -3,6 +3,8 @@ overrides:
     conf:
       global:
         osd heartbeat grace: 100
+        # this line to address issue #10178
+        mon lease = 15
   rgw:
     default_idle_timeout: 1200
   s3tests:
