--- a/machine_types/vps.yaml
+++ b/machine_types/vps.yaml
@@ -5,6 +5,7 @@ overrides:
         osd heartbeat grace: 100
         # this line to address issue #10178
         mon lease: 15
+        mon lease ack timeout: 25
   rgw:
     default_idle_timeout: 1200
   s3tests:
