Added more logging
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/suites/upgrade/firefly-x/parallel/2-workload/test_rbd_api.yaml
+++ b/suites/upgrade/firefly-x/parallel/2-workload/test_rbd_api.yaml
@@ -5,3 +5,4 @@ workload:
         clients:
           client.3:
             - rbd/test_librbd.sh
+    - print: "**** done rbd/test_librbd.sh 2-workload"
