--- a/suites/upgrade/firefly-x/parallel/2-workload/test_rbd_python.yaml
+++ b/suites/upgrade/firefly-x/parallel/2-workload/test_rbd_python.yaml
@@ -5,3 +5,4 @@ workload:
         clients:
           client.4:
             - rbd/test_librbd_python.sh
+    - print: "**** done rbd/test_librbd_python.sh 2-workload"
