--- a/suites/upgrade/firefly-x/parallel/4-final-workload/rbd_import_export.yaml
+++ b/suites/upgrade/firefly-x/parallel/4-final-workload/rbd_import_export.yaml
@@ -5,3 +5,4 @@ tasks:
           - rbd/import_export.sh
       env:
         RBD_CREATE_ARGS: --new-format
+  - print: "**** done rbd/import_export.sh 4-final-workload"
