--- a/suites/upgrade/firefly-x/parallel/2-workload/rados_loadgenbig.yaml
+++ b/suites/upgrade/firefly-x/parallel/2-workload/rados_loadgenbig.yaml
@@ -5,3 +5,4 @@ workload:
         clients:
           client.2:
             - rados/load-gen-big.sh
+    - print: "**** done rados/load-gen-big.sh 2-workload"
