--- a/suites/upgrade/firefly-x/parallel/4-final-workload/rados_loadgenmix.yaml
+++ b/suites/upgrade/firefly-x/parallel/4-final-workload/rados_loadgenmix.yaml
@@ -3,3 +3,4 @@ tasks:
       clients:
         client.1:
           - rados/load-gen-mix.sh
+  - print: "**** done rados/load-gen-mix.sh 4-final-workload"
