--- a/suites/upgrade/firefly-x/parallel/4-final-workload/rbd_cls.yaml
+++ b/suites/upgrade/firefly-x/parallel/4-final-workload/rbd_cls.yaml
@@ -3,4 +3,4 @@ tasks:
       clients:
         client.1:
           - cls/test_cls_rbd.sh
-
+  - print: "**** done cls/test_cls_rbd.sh 4-final-workload"
