Fixed #10269 http://tracker.ceph.com/issues/10269
Signed-off-by: Yuri Weinstein <yuri.weinstein@inktank.com>

--- a/erasure-code/ec-rados-parallel.yaml
+++ b/erasure-code/ec-rados-parallel.yaml
@@ -1,5 +1,5 @@
 workload:
-  sequential:
+  parallel:
     - rados:
        clients: [client.0]
        ops: 4000
@@ -16,4 +16,4 @@ workload:
          copy_from: 50
          setattr: 25
          rmattr: 25
-    - print: "**** done rados ec sequential"
+    - print: "**** done rados ec parallel"
