Changed test_cache-pool-snaps.yaml case to run sequentially, make sure that the pool 'base' created normally in order
Signed-off-by: Yuri Weinstein <yuriw@magna002.ceph.redhat.com>

--- a/suites/upgrade/firefly-x/parallel/2-workload/parallel_run/test_cache-pool-snaps.yaml
+++ b/suites/upgrade/firefly-x/parallel/2-workload/parallel_run/test_cache-pool-snaps.yaml
@@ -3,7 +3,7 @@ overrides:
     log-whitelist:
       - must scrub before tier agent can activate
 workload:
-  parallel:
+  sequential:
   - exec:
       client.0:
         - ceph osd pool create base 4
