--- a/suites/rbd/librbd/workloads/qemu_bonnie.yaml
+++ b/suites/rbd/librbd/workloads/qemu_bonnie.yaml
@@ -1,5 +1,5 @@
 tasks:
 - qemu:
     all:
-      test: https://ceph.com/git/?p=ceph.git;a=blob_plain;f=qa/workunits/suites/bonnie.sh
+      test: https://ceph.com/git/?p=ceph.git;a=blob_plain;hb=dumpling;f=qa/workunits/suites/bonnie.sh
 exclude_arch: armv7l
