--- a/suites/rbd/librbd/workloads/qemu_xfstests.yaml
+++ b/suites/rbd/librbd/workloads/qemu_xfstests.yaml
@@ -3,5 +3,5 @@ tasks:
     all:
       type: block
       num_rbd: 2
-      test: https://ceph.com/git/?p=ceph.git;a=blob_plain;f=qa/run_xfstests_qemu.sh
+      test: https://ceph.com/git/?p=ceph.git;hb=dumpling;a=blob_plain;f=qa/run_xfstests_qemu.sh
 exclude_arch: armv7l
