--- a/suites/fs/recovery/tasks/mds-full.yaml
+++ b/suites/fs/recovery/tasks/mds-full.yaml
@@ -1,6 +1,8 @@
 
 overrides:
     ceph:
+        log-whitelist:
+          - OSD full dropping all updates
         conf:
             osd:
               osd objectstore: memstore
