--- a/suites/ceph-deploy/basic/tasks/ceph-deploy_hello_world.yaml
+++ b/suites/ceph-deploy/basic/tasks/ceph-deploy_hello_world.yaml
@@ -25,5 +25,5 @@ tasks:
 - workunit:
      clients:
         client.0:
-           - rados/test.sh
-- print: "**** done rados/test.sh"
+           - ceph-deploy/ceph-deploy_hello_world.sh
+- print: "**** done ceph-deploy/ceph-deploy_hello_world.sh"
